--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-          <div class="info-block d-none d-lg-block d-xl-none">
+          <div class="info-block d-none d-lg-block d-xl-block">
             <p class="info-block-text text-center">livrason gratuite en France sur toutes vos commandes</p>
           </div>
           <nav class="navbar navbar-expand-lg navbar-light p-1 nav-fill flex-lg-justify-center">
@@ -21,25 +21,25 @@
               <div class="collapse navbar-collapse order-md-0 order-lg-1" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
-                          <a class="nav-link" href="#">Nouveautés <span class="sr-only">(current)</span></a>
+                          <a class="nav-link text-uppercase" href="#">Nouveautés <span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Homme</a>
+                          <a class="nav-link text-uppercase" href="#">Homme</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Femme</a>
+                          <a class="nav-link text-uppercase" href="#">Femme</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Lifestore</a>
+                          <a class="nav-link text-uppercase" href="#">Lifestore</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Skate</a>
+                          <a class="nav-link text-uppercase" href="#">Skate</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Marques</a>
+                          <a class="nav-link text-uppercase" href="#">Marques</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Outlet</a>
+                          <a class="nav-link text-uppercase" href="#">Outlet</a>
                       </li>
                   </ul>
               </div>
@@ -59,7 +59,15 @@
           </nav>
         </header>
         
-        <main class="main pt-0">
+        <main class="main pt-0 flex-lg-row">
+          <nav class="d-none d-lg-block d-xl-block" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+              <li class="breadcrumb-item"><a href="#">Homme</a></li>
+              <li class="breadcrumb-item"><a href="#">Skate</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Nike SB Dunk High Pro - Truck it</li>
+            </ol>
+          </nav>
           <section class="product"> 
             <div class="main-slider">
               <div class="slider_item">
@@ -83,9 +91,7 @@
             <h2 class="infos-title font-weight-bold">
               Nike SB Dunk High Pro - Truck it
             </h2>
-            <p class="infos-ref">
-              <small>Référence : BQ6826-003</small>
-            </p>
+            <p class="infos-ref">Référence : BQ6826-003</p>
             <div class="infos-price d-flex justify-content-start">
               <p class="infos-price-base mr-2"><small><del>80,00€</del></small></p>
               <p class="infos-price-reduc bg-dark text-white mr-2">-10%</del></p>
@@ -114,13 +120,13 @@
           <div class="button-addcart d-flex justify-content-center">
             <button type="button" class="btn btn-lg rounded-0 p-3 col-12">Ajouter au panier</button>
           </div>
-        <p class="collection-text mt-4">Cette Nike SB Dunk High Pro Black/University Gold appartient à la collection</p>
-        <ul class="insurance-list mb-4">
-          <li><img src="images/svg/insurance-2.svg"/><strong>Livraison gratuite en france métropolitaine</strong></li>
-          <li><img src="images/svg/insurance-5.svg"/><strong>Expédition le jour même jusqu'à 13H</strong></li>
-          <li><img src="images/svg/insurance-1.svg"/><strong>Paiement 100% sécurisé</strong></li>
-        </ul>
-        <a class="collection-link mt-4"><img src="images/svg/logo-nike.svg" height="35px"/>Voir tout les produits Nike</a>
+          <p class="collection-text mt-4">Cette Nike SB Dunk High Pro Black/University Gold appartient à la collection</p>
+          <ul class="insurance-list mb-4">
+            <li><img src="images/svg/insurance-2.svg"/>Livraison gratuite en france métropolitaine</li>
+            <li><img src="images/svg/insurance-5.svg"/>Expédition le jour même jusqu'à 13H</li>
+            <li><img src="images/svg/insurance-1.svg"/>Paiement 100% sécurisé</li>
+          </ul>
+          <a class="collection-link mt-4 text-center  justify-content-center"><img src="images/svg/logo-nike.svg" height="35px"/>Voir tout les produits Nike</a>
         </main>
         
         <aside class="aside like">
@@ -153,7 +159,7 @@
           </div>
         </aside>
 
-        <aside class="insurance row row-cols-2 row-cols-sm-2 row-cols-md-4 mx-auto">
+        <aside class="insurance row row-cols-2 row-cols-sm-2 row-cols-md-4 mx-auto pt-4">
           <div class="insurance-text col text-center">
             <img src="images/svg/insurance-2.svg" alt="" height="25%">
             <h5>Livraison gratuite</h5>
