:lipstick:update styles

--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
             <div class="infos-size">
               <div class="infos-size-top d-flex justify-content-between align-content-start row row-cols-2  align-items-baseline">
                 <p class="align-items-start col-6 font-weight-bold text-uppercase">Taille</p>
-                <ul class="infos-size-country d-flex col-6">
+                <ul class="infos-size-country d-flex col-6 justify-content-end">
                   <li class="infos-size-country-item p-2 active">EU</li>
                   <li class="infos-size-country-item p-2">US</li>
                   <li class="infos-size-country-item p-2">UK</li>
@@ -212,30 +212,27 @@
           </div>
         </main>
         
-        <aside class="aside like">
-          <h3 class="">Vous aimerez aussi</h3>
-          <div class="aside-slider">
+        <aside class="aside-like">
+          <div class="row">
+            <div class="col-sm-0 col-md-0 col-lg-2"></div>
+            <h3>Vous aimerez aussi</h3>
+          </div>
+          <div class="aside-slider d-lg-none d-xl-none">
             <div class="slider-item">
-              <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="images/img-chaussure-1.jpg" alt="Card image cap">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top mx-auto" src="images/img-chaussure-1.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
-            <div class="slider-item">
-              <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="images/img-chaussure-1.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="slider-item">
-              <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="images/img-chaussure-1.jpg" alt="Card image cap">
+          </div>
+          <!--large slider-->
+          <div class="aside-slider-large d-none d-lg-block d-xl-block">
+            <div class="slider-item border-0">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top " src="images/img-chaussure-1.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -245,9 +242,34 @@
           </div>
         </aside>
         
-        <aside class="aside last">
-          <h3 class="">Derniers articles consultés</h3>
-          <!--TODO-->
+        <aside class="aside-last">
+          <div class="row">
+            <div class="col-sm-0 col-md-0 col-lg-2"></div>
+            <h3>Derniers articles consultés</h3>
+          </div>
+          <div class="aside-slider d-lg-none d-xl-none">
+            <div class="slider-item">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top" src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--large slider-->
+          <div class="aside-slider-large d-none d-lg-block d-xl-block">
+            <div class="slider-item ">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top" src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </aside>
 
         <aside class="insurance d-flex justify-content-center row row-cols-2 row-cols-sm-2 row-cols-md-4 mx-auto pt-4">
