:lipstick:editing HTML/SCSS & JS

--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
         <aside class="aside-like">
           <div class="row">
             <div class="col-sm-0 col-md-0 col-lg-2"></div>
-            <h3>Vous aimerez aussi</h3>
+            <h3>Derniers articles</h3>
           </div>
           <div class="aside-slider d-lg-none d-xl-none">
             <div class="slider-item">
@@ -227,9 +227,69 @@
                 </div>
               </div>
             </div>
+            <div class="slider-item">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top mx-auto" src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slider-item">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top mx-auto" src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
           </div>
+          <!--
+          <div class="arrows d-lg-none d-xl-none text-center">
+            <ul>
+                <li class="prev"><img src="images/svg/nav-arrow-left.svg"/></li>
+                <li class="next"><img src="images/svg/nav-arrow-right.svg"/></li>
+            </ul>
+          </div >
+          -->
           <!--large slider-->
+          <div class="arrows-larger d-lg-block d-xl-block">
+              <div class="d-flex justify-content-end">
+                <p class="see-all d-none d-lg-block d-xl-block">Tout voir</p>
+                <img height="25px" src="images/svg/nav-arrow-left.svg" alt="">
+                <img height="25px" src="images/svg/nav-arrow-right.svg" alt="">
+            </div>
+          </div>
           <div class="aside-slider-large d-none d-lg-block d-xl-block">
+            <div class="slider-item border-0">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top " src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slider-item border-0">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top " src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slider-item border-0">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top " src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
             <div class="slider-item border-0">
               <div class="card border-0" style="width: 18rem;">
                 <img class="card-img-top " src="images/img-chaussure-1.jpg" alt="Card image cap">
@@ -250,7 +310,25 @@
           <div class="aside-slider d-lg-none d-xl-none">
             <div class="slider-item">
               <div class="card border-0" style="width: 18rem;">
-                <img class="card-img-top" src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <img class="card-img-top mx-auto" src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slider-item">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top mx-auto" src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slider-item">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top mx-auto" src="images/img-chaussure-1.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -258,11 +336,53 @@
               </div>
             </div>
           </div>
+          <!--
+          <div class="arrows d-lg-none d-xl-none text-center">
+            <ul>
+                <li class="prev"><img src="images/svg/nav-arrow-left.svg"/></li>
+                <li class="next"><img src="images/svg/nav-arrow-right.svg"/></li>
+            </ul>
+          </div >
+          -->
           <!--large slider-->
+          <div class="arrows-larger d-lg-block d-xl-block">
+            <div class="d-flex justify-content-end">
+              <p class="see-all d-none d-lg-block d-xl-block">Tout voir</p>
+              <img height="25px" src="images/svg/nav-arrow-left.svg" alt="">
+              <img height="25px" src="images/svg/nav-arrow-right.svg" alt="">
+          </div>
+        </div>
           <div class="aside-slider-large d-none d-lg-block d-xl-block">
-            <div class="slider-item ">
+            <div class="slider-item border-0">
               <div class="card border-0" style="width: 18rem;">
-                <img class="card-img-top" src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <img class="card-img-top " src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slider-item border-0">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top " src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slider-item border-0">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top " src="images/img-chaussure-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="slider-item border-0">
+              <div class="card border-0" style="width: 18rem;">
+                <img class="card-img-top " src="images/img-chaussure-1.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
